[package]
name = "agnostic-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Matt George <pyroraptor07@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
openssl = ["dep:openssl"]
openssl-vendored = ["openssl", "openssl?/vendored"]
rustcrypto = ["dep:rsa", "dep:aes", "dep:cfb-mode", "dep:sha2"]

[dependencies]
base64 = "0.21.0"
cfg-if = "1"
snafu = "0.7.3"

# RustCrypto dependencies
aes = { version = "0.8.1", optional = true }
cfb-mode = { version = "0.8.2", optional = true }
rsa = { version = "0.8.0", optional = true }
sha2 = { version = "0.10.6", optional = true }

# Native crypto dependencies
openssl = { version = "0.10.41", optional = true }